--- a/src/App.css
+++ b/src/App.css
@@ -24,10 +24,9 @@ body {
     font-weight: 600;
     line-height: 55px !important;
     position: relative;
-    text-transform: uppercase;
     text-decoration: none;
     padding-bottom: 0;
-    margin: 0 24px;
+    margin: 0 22px;
     padding: 0 !important;
 }
 
@@ -37,7 +36,7 @@ body {
     bottom: 2px;
     left: 0;
     right: 0;
-    height: 3px;
+    height: 2px;
     background-color: #fff;
 }
 
@@ -99,7 +98,7 @@ body {
 
 .topbanner h1 {
     color: #fff;
-    font-size: 60px;
+    font-size: 50px;
     font-weight: 700;
     letter-spacing: 3.5px;
     margin-bottom: 5px;
@@ -111,7 +110,7 @@ body {
 
 .topbanner p {
     color: #fff;
-    font-size: 19px;
+    font-size: 18px;
     font-weight: 400;
     display: flex;
     letter-spacing: 1px;
@@ -140,7 +139,7 @@ body {
     background-color: transparent;
     border-width: 2px;
     border-radius: 30px;
-    padding: 11px 24px !important;
+    padding: 9px 18px !important;
     transition: all 0.2s linear;
     outline: none !important;
     vertical-align: middle;
@@ -160,11 +159,11 @@ body {
 }
 
 .banner-btn i {
-    font-size: 32px;
+    font-size: 30px;
 }
 
 .banner-btn span {
-    font-size: 19px;
+    font-size: 16px;
     vertical-align: middle;
     line-height: 32px;
 }
@@ -229,8 +228,8 @@ body {
 }
 
 .service-img {
-    width: 110px;
-    height: 120px;
+    width: 100px;
+    height: 100px;
     margin-top: 35px;
     margin-bottom: 5px;
 }
@@ -245,7 +244,9 @@ body {
     margin-top: -170px;
     margin-bottom: 50px;
 }
-
+.drawer-nav a{
+    text-transform: capitalize !important;
+}
 
 
 
@@ -342,7 +343,7 @@ body {
 
 @media screen and (min-width: 1024px) {
 .tbanner{
-min-height:822px;
+/*min-height:822px;*/
 }
 }
 @media screen and (max-width: 768px) {
