--- a/src/App.css
+++ b/src/App.css
@@ -195,11 +195,11 @@ body {
     font-weight: 700;
     color: #232323;
     text-transform: uppercase;
-    font-size: 21px;
+    font-size: 20px;
     letter-spacing: 1px;
     position: relative;
     line-height: 1;
-    padding: 15px 10px 10px;
+    padding: 5px 10px 5px;
 }
 
 .service-card:hover h5 {
@@ -220,16 +220,16 @@ body {
 }*/
 
 .service-card p {
-    line-height: 24px;
-    font-size: 17px;
-    margin-bottom: 17px;
+    line-height: 1;
+    font-size: 15px;
+    margin-bottom: 15px;
     color: #666;
-    letter-spacing: 0.6px;
+    letter-spacing: 0.5px;
 }
 
 .service-img {
-    width: 100px;
-    height: 100px;
+    width: 90px;
+    height: 95px;
     margin-top: 35px;
     margin-bottom: 5px;
 }
@@ -265,7 +265,7 @@ body {
 }
 
 .mdl-layout__header-row {
-    height: 95px !important;
+    height: 75px !important;
 }
 
 .mdl-layout__drawer {
@@ -281,7 +281,7 @@ body {
 
 @media screen and (max-width: 1024px) {
     .mdl-layout__header .mdl-layout__drawer-button {
-        margin: 25px 4px 4px 8px !important;
+        margin: 15px 4px 4px 8px !important;
     }
     .service-container {
         width: auto;
